--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     <div class="mdui-card-primary-title mdui-center">Fmkli</div>
                 </div>
                 <!-- 卡片的内容 -->
-                <div class="mdui-card-content mdui-typo">
-                    <p class="mdui-center">本主页由Fmkli使用mdui框架制作<br>
+                <div class="mdui-card-content mdui-typo mdui-center">
+                    <p>本主页由Fmkli使用mdui框架制作<br>
                     蛤，小可爱，我是Fmkli，一位学生，喜欢编程，喜欢火车！<br />详细可看关于页面</br>还请多多指教！
                     <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" >关注我</a> 或 通过BiliBili<a
                         href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow">与我交流awa</a>。
