--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" >关注我</a> 或 通过BiliBili<a
                         href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow">与我交流awa</a>。
                     <br>你也可以通过邮箱找到我：<code>fmkli2@qq.com</code>
-                    <br>留言去：<a href="https://blog.imfmkli.top/留言板/">https://blog.imfmkli.top/留言板/</a>
+                    <br>留言去本站的留言板或者<a href="https://blog.imfmkli.top/留言板/">https://blog.imfmkli.top/留言板/</a>这里哦
                     <br>也可以捐赠一下我拉（害羞羞）：<a href="https://afdian.net/@imfmkli">爱发电</a>
                 </div>
             </div>
