--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-	    		<center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" href="https://blog.imfmkli.top/说说/" id="jiazaiss">加载说说（前往博客）</button><br>jsd拖慢网站速度，跳转去博客</center>
+	    		<center><a href="//blog.imfmkli.top/说说"><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" href="https://blog.imfmkli.top/说说/" id="jiazaiss">加载说说（前往博客）</button></a><br>jsd拖慢网站速度，跳转去博客</center>
 
                 </div>
 
