--- a/index.html
+++ b/index.html
@@ -391,6 +391,19 @@
     <script src="./mdui/js/mdui.min.js"></script>
     <script src="./home.js"></script>
     <script src="https://unpkg.com/twikoo@1.4.15/dist/twikoo.all.min.js"></script>
+    <script src="https://giscus.app/client.js"
+            data-repo="fmkli/fmkli"
+            data-repo-id="MDEwOlJlcG9zaXRvcnkyOTA0NTkxNTQ="
+            data-category="随便说说"
+            data-category-id="DIC_kwDOEVAOEs4CAXnX"
+            data-mapping="title"
+            data-reactions-enabled="1"
+            data-emit-metadata="0"
+            data-theme="light"
+            data-lang="zh-CN"
+            crossorigin="anonymous"
+            async>
+    </script>
 
 </body>
 </html>
