--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 </div>
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClick();" id="jiazai">加载留言系统</button></center>
+		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClick();" id="jiazai">加载留言系统（twikoo）</button></center>
 		    <!--留言-->
                     <div id="tcomment"></div>
                     <script>
@@ -391,19 +391,6 @@
     <script src="./mdui/js/mdui.min.js"></script>
     <script src="./home.js"></script>
     <script src="https://unpkg.com/twikoo@1.4.15/dist/twikoo.all.min.js"></script>
-    <script src="https://giscus.app/client.js"
-            data-repo="fmkli/fmkli"
-            data-repo-id="MDEwOlJlcG9zaXRvcnkyOTA0NTkxNTQ="
-            data-category="随便说说"
-            data-category-id="DIC_kwDOEVAOEs4CAXnX"
-            data-mapping="title"
-            data-reactions-enabled="1"
-            data-emit-metadata="0"
-            data-theme="light"
-            data-lang="zh-CN"
-            crossorigin="anonymous"
-            async>
-    </script>
 
 </body>
 </html>
