--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             		    })
   		 	 }
 		    </script>
+		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClick();" id="jiazai">加载留言系统（giscus（跳转去另一个页面））</button></center>
 		    <!--留言-->
                 </div>
             </div>
@@ -198,7 +199,7 @@
 
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-	    		<center><a href="//blog.imfmkli.top/说说"><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" href="https://blog.imfmkli.top/说说/" id="jiazaiss">加载说说（前往博客）</button></a><br>jsd拖慢网站速度，跳转去博客</center>
+	    		<center><li onclick="window.location.href='https://blog.imfmkli.top'><a><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" href="https://www.imfmkli.top/say.html" id="jiazaiss">加载说说（前往另一个页面）</button></a></li><br>jsd拖慢网站速度，跳转去另一个页面</center>
 
                 </div>
 
