--- a/index.html
+++ b/index.html
@@ -182,7 +182,12 @@
             		    })
   		 	 }
 		    </script><br>
-		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClick();" id="jiazai">加载留言系统（giscus（跳转去另一个页面））</button></center>
+		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickww();" id="jiazai">加载留言系统（giscus（跳转去另一个页面））</button></center>
+		    <script>
+		        function buttonClickww(){
+				window.location.href='https://www.imfmkli.top/talk.html'
+  		        }
+	    	    </script>
 		    <!--留言-->
                 </div>
             </div>
@@ -199,7 +204,7 @@
 
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-	    		<center><li onclick="window.location.href='https://blog.imfmkli.top'><a><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" href="https://www.imfmkli.top/say.html" id="jiazaiss">加载说说（前往另一个页面）</button></a></li><br>jsd拖慢网站速度，跳转去另一个页面</center>
+	    		<center><a href="https://www.imfmkli.top/say.html"><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" href="https://www.imfmkli.top/say.html" id="jiazaiss">加载说说（前往另一个页面）</button></a><br>jsd拖慢网站速度，跳转去另一个页面</center>
 
                 </div>
 
