--- a/index.html
+++ b/index.html
@@ -167,12 +167,9 @@
                 </div>
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClick();" id="jiazai">加载留言系统（twikoo）</button></center>
 		    <!--留言-->
                     <div id="tcomment"></div>
                     <script>
-                        function buttonClick(){
-			    jiazai.style.display = "none";
                             twikoo.init({
                 	    envId: 'https://talk-dusky.vercel.app/',
                 	    el: '#tcomment',
@@ -180,9 +177,8 @@
                		    // path: 'window.location.pathname', // 用于区分不同文章的自定义 js 路径，如果您的文章路径不是 location.pathname，需传此参数
                  	    // lang: 'zh-CN', // 用于手动设定评论区语言，支持的语言列表 https://github.com/imaegoo/twikoo/blob/dev/src/js/utils/i18n/index.js
             		    })
-  		 	 }
 		    </script><br>
-		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickww();" id="jiazai">加载留言系统（giscus（跳转去另一个页面））</button></center>
+		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickww();" id="jiazai">加载留言系统2（giscus（跳转去另一个页面））</button></center>
 		    <script>
 		        function buttonClickww(){
 				window.location.href='https://www.imfmkli.top/talk.html'
