--- a/404.html
+++ b/404.html
@@ -6,91 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not Found</title>
-    <link rel="stylesheet" href="https://fmkli.js.org/mdui2/css/mdui.min.css"
-        integrity="sha384-cLRrMq39HOZdvE0j6yBojO4+1PrHfB7a9l5qLcmRm/fiWXYY+CndJPmyu5FV/9Tw" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/home.css">
-    <style type="text/css">
-        #right-menu{
-            position: absolute;
-            width: 200px;
-            height: auto;
-            border: 1px #ccc solid;
-            display: none;
-            padding:2px 0; 
-            box-shadow: 5px 5px 5px #ccc;
-        }
-        .menu-item{
-            height: 25px;
-            margin:4px 0; 
-            padding:0 10px;
-            cursor: pointer;
-        }
-        .menu-item:hover{
-            background-color: #ccc;
-        }
-        .menu-item-separator{
-            border-top:1px #ccc solid;
-            height: 1px;
-        }
-    </style>
 </head>
 
-<body class="">
-    <!-- Banner -->
-    <div class="mdui-appbar mdui-shadow-0 mdui-appbar-fixed mdui-text-color-white">
-        <div class="mdui-toolbar mdui-color-theme">
-            <a href="javascript:;" class="mdui-btn mdui-btn-icon"
-                mdui-drawer="{target: '#left-drawer',overlay: true}"><i class="mdui-icon material-icons">menu</i></a>
-            <a href="/" class="mdui-typo-title">Fmkli的站点</a>
-            <div class="mdui-toolbar-spacer"></div>
-        </div>
-    </div>
-    <nav id="banner" class="mdui-container-fluid mdui-valign">
-        <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-          404
-        </h2>
-    </nav>
-
-    <!-- 介绍卡片 -->
-    <div class="mdui-card card">
-
-        <div class="mdui-card-primary">
-            <div class="mdui-card-primary-title">页面不存在</div>
-        </div>
-
-        <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">这里似乎没有你所寻找的内容nie，试着检查地址栏和域名是否正确。
-
-        </div>
-
-    </div>
-
-
-    <!-- 抽屉栏 -->
-    <div class="mdui-drawer mdui-color-white mdui-drawer-close" id="left-drawer">
-        <ul class="mdui-list">
-            <li class="mdui-subheader">你拉开了这个网站的抽屉！</li>
-            <li class="mdui-subheader">相关链接</li>
-            
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='//www.imfmkli.top'">
-                <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
-                <div class="mdui-list-item-content">Fmkli</div>
-            </li>
-        </ul>
-
-    </div>
-
-    <footer class="mdui-text-center">
-        <p>&copy; 2021 Fmkli的站点</p>
-    </footer>
-
-    <script src="https://fmkli.js.org/mdui2/js/mdui.min.js"
-        integrity="sha384-gCMZcshYKOGRX9r6wbDrvF+TcCCswSHFucUzUPwka+Gr+uHgjlYvkABr95TCOz3A"
-        crossorigin="anonymous"></script>
-    <script src="/404.js"></script>
-    <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
-        <a href="https://myssl.com/www.imfmkli.top?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
-    </div>
+<body>
+<center>
+<h1>404 Not Found</h1>
+奶奶滴，怎么跑这来了？奶奶滴，回去！奶奶滴，这里没文件！<br><h4><a href="/">屑主页</a></h4>
+</center>
 </body>
 
 </html>
