--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png/webp'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
-        <div class="mdui-toolbar mdui-color-cyan">
+        <div class="mdui-toolbar mdui-color-green">
         <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
         <a href="javascript:var s=document.createElement('script');s.src='//topurl.cn/chat.js';document.body.append(s);;" class="mdui-typo-title">Fmkli</a>
         <div class="mdui-toolbar-spacer"></div>
         <!-- 按钮 -->
         <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
         </div>
-        <div class="mdui-tab mdui-color-cyan mdui-tab-centered" mdui-tab>
+        <div class="mdui-tab mdui-color-green mdui-tab-centered" mdui-tab>
         <a href="#tab1" class="mdui-ripple mdui-ripple-white">主页</a>
         <a href="#tab2" class="mdui-ripple mdui-ripple-white">更多</a>
         <a href="#tab3" class="mdui-ripple mdui-ripple-white">关于</a>
