--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
                 </div>
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
+			<center><h3>留言准则</h3>
+  		    发布评论时，请遵守您所在国家和中华人民共和国的法律法规，禁止发布政治相关内容；<br>
+   		    请尊重他人，友好评论，请像和他人面对面谈话时一样保持对他人的尊重；<br>
+  		    禁止发布商业广告；<br>
+			</center>
+
 			<div id="tcomment"></div>
 			<script src="https://unpkg.com/twikoo@1.4.15/dist/twikoo.all.min.js"></script>
 			<script>
