--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         <!-- 末尾卡片 -->
         <div class="mdui-card card">
             <div class="mdui-card-primary">
-                <div class="mdui-card-primary-title mdui-center">&copy; 2022 Fmkli</div>
+                <div class="mdui-card-primary-title mdui-center"><a href="javascript:">&copy; <a href="javascript:var element=document.getElementById('xgz');element.innerHTML='2022 屑鸽子Fmkli';">2022 Fmkli</a></div>
             </div>
             <!-- 卡片的内容 -->
             <div class="mdui-card-content mdui-typo mdui-center">
@@ -399,6 +399,10 @@
 
     <script src="./mdui/js/mdui.min.js"></script>
     <script src="./home.js"></script>
-
+    <script>
+	function buttonClickww(){
+	    window.location.href='https://www.imfmkli.top/talk.html'
+  	}
+    </script>
 </body>
 </html>
