--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-green">
         <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
-        <a href="javascript:var s=document.createElement('script');s.src='//topurl.cn/chat.js';document.body.append(s);;" class="mdui-typo-title">Fmkli</a>
+        <a href="javascript:var s=document.createElement('script');s.src='//topurl.cn/chat.js';document.body.append(s);;" class="mdui-typo-title"><img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="40" height="40">Fmkli</a>
         <div class="mdui-toolbar-spacer"></div>
         <!-- 按钮 -->
         <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
