--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-white">
         <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
-        <a href="javascript:var s=document.createElement('script');s.src='//topurl.cn/chat.js';document.body.append(s);;" class="mdui-typo-title"><img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="50" height="50">Fmkli</a>
+        <a href="https://www.imfmkli.top" class="mdui-typo-title">Fmkli</a>
         <div class="mdui-toolbar-spacer"></div>
         <!-- 按钮 -->
         <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
+        <a href="javascript:var s=document.createElement('script');s.src='//topurl.cn/chat.js';document.body.append(s);;" class="mdui-btn mdui-btn-icon"><img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="50" height="50"></a>
         </div>
         <div class="mdui-tab mdui-color-white mdui-tab-centered" mdui-tab>
         <a href="#tab1" class="mdui-ripple mdui-ripple-white">主页</a>
