--- a/index.html
+++ b/index.html
@@ -302,6 +302,11 @@
                 <i class="mdui-list-item-icon mdui-icon material-icons">games</i>
                 <div class="mdui-list-item-content">ADarkRoom</div>
             </li>
+		
+	    <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://eatkano.imfmkli.top/'">
+                <i class="mdui-list-item-icon mdui-icon material-icons">games</i>
+                <div class="mdui-list-item-content">吃掉小鹿乃</div>
+            </li>
             
             <li class="mdui-subheader">找到我</li>
             
