--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-cyan">
         <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
-        <a href="https://www.imfmkli.top" class="mdui-typo-title">Fmkli</a>
+        <a href="https://www.imfmkli.top" class="mdui-typo-title">屑鸽子Fmkli的网站</a>
         <div class="mdui-toolbar-spacer"></div>
         <!-- 按钮 -->
         <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
@@ -48,9 +48,9 @@
                 <div class="mdui-card-content mdui-typo mdui-center">
 		    <img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="100" height="100">
                     <p>本主页由Fmkli使用mdui框架制作<br>
-                    蛤，小可爱，我是Fmkli，一位学生，喜欢编程，喜欢火车！<br />详细可看关于页面</br>还请多多指教！
-                    <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" >关注我</a> 或 通过BiliBili<a
-                        href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow">与我交流awa</a>。
+                    蛤，欢迎小可爱，我是Fmkli，一位学生，一只鸽子<br />详细可看关于页面</br>还请多多指教！
+                    <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" >关注我</a> 或 通过 BiliBili<a
+                        href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow"> 与我交流awa </a>。
                     <br>你也可以通过邮箱找到我：<code>fmkli2@qq.com</code>
                     <br>留言去本站的留言板或者<a href="https://blog.imfmkli.top/留言板/">https://blog.imfmkli.top/留言板/</a>这里哦
                     <br>也可以捐赠一下我拉（害羞羞）：<a href="https://afdian.net/@imfmkli">爱发电</a>
@@ -170,9 +170,9 @@
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
 			<center><h3>留言准则</h3>
-  		    发布评论时，请遵守您所在国家和中华人民共和国的法律法规，禁止发布政治相关内容；<br>
-   		    请尊重他人，友好评论，请像和他人面对面谈话时一样保持对他人的尊重；<br>
-  		    禁止发布商业广告；<br>
+  		    发布评论时，请遵守法律法规，禁止发布违法违规及政治相关内容；<br>
+   		    请友好评论，保持对他人的尊重；<br>
+  		    严禁发布广告；<br>
 			</center>
 
 			<div id="tcomment"></div>
@@ -322,7 +322,7 @@
                     class="mdui-list-item-icon mdui-icon material-icons">code</i>
                 <div class="mdui-list-item-content">共创世界</div>
             </li>
-            <li class="mdui-list-item mdui-ripple" onclick="mdui.alert('fmkli@mail.fmkli.ga')"> <i
+            <li class="mdui-list-item mdui-ripple" onclick="mdui.alert('fmkli2@qq.com')"> <i
                     class="mdui-list-item-icon mdui-icon material-icons">mail</i>
                 <div class="mdui-list-item-content">Email</div>
             </li>
