--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-cyan">
         <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
-        <a href="https://www.imfmkli.top" class="mdui-typo-title">屑鸽子Fmkli的网站</a>
+        <a href="https://www.imfmkli.top" class="mdui-typo-title">Fmkli</a>
         <div class="mdui-toolbar-spacer"></div>
         <!-- 按钮 -->
         <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
@@ -42,7 +42,7 @@
             <div class="mdui-card card">
 
                 <div class="mdui-card-primary">
-                    <div class="mdui-card-primary-title mdui-center">Fmkli</div>
+                    <div class="mdui-card-primary-title mdui-center">屑鸽子Fmkli</div>
                 </div>
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo mdui-center">
