--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <div class="mdui-card-content mdui-typo">
 		    <center>
 		    <img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="100" height="100">
-                    <p>本主页由Fmkli使用mdui框架制作<br>。
-                    蛤，欢迎小可爱，我是Fmkli，一位学生，一只鸽子。<br />详细可看关于页面</br>还请多多指教！
+                    <p>本主页由Fmkli使用mdui框架制作。<br>
+                    蛤，欢迎小可爱，我是Fmkli，一位学生，一只鸽子。<br />详细可看关于页面。</br>还请多多指教！
                     <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" >关注我</a> 或 通过 BiliBili<a
-                        href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow"> 与我交流awa 。</a>
+                        href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow"> 与我交流awa </a>。
                     <br>你也可以通过邮箱找到我：<code>fmkli2@qq.com</code>。
                     <br>留言去本站的留言板或者<a href="https://blog.imfmkli.top/留言板/">https://blog.imfmkli.top/留言板/</a>这里哦。
                     <br>也可以捐赠一下我拉（害羞羞）：<a href="https://afdian.net/@imfmkli">爱发电</a>。
