--- a/index.html
+++ b/index.html
@@ -265,6 +265,11 @@
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
                 <div class="mdui-list-item-content">FmkliのBlog</div>
             </li>
+
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://2blog.imfmkli.top'">
+                <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
+                <div class="mdui-list-item-content">Fmkliの副Blog</div>
+            </li>
             
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://bbs.imfmkli.top'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">wifi_tethering</i>
