--- a/index.html
+++ b/index.html
@@ -176,22 +176,16 @@
    		    请友好评论，保持对他人的尊重；<br>
   		    严禁发布广告；<br>
 			</center>
-
-			<div id="tcomment"></div>
-			<script src="https://unpkg.com/twikoo@1.4.15/dist/twikoo.all.min.js"></script>
-			<script>
-				twikoo.init({
-				  envId: 'https://talk-dusky.vercel.app/',
- 				  el: '#tcomment',
- 				  // region: 'ap-guangzhou', // 环境地域，默认为 ap-shanghai，如果您的环境地域不是上海，需传此参数
-				  // path: 'window.location.pathname', // 用于区分不同文章的自定义 js 路径，如果您的文章路径不是 location.pathname，需传此参数
- 				  // lang: 'zh-CN', // 用于手动设定评论区语言，支持的语言列表 https://github.com/imaegoo/twikoo/blob/dev/src/js/utils/i18n/index.js
-				})
-			</script>
+		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickwww();" id="jiazai">加载留言系统1（Twikoo（跳转去另一个页面））</button></center>			
 		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickww();" id="jiazai">加载留言系统2（giscus（跳转去另一个页面））</button></center>
 		    <script>
 		        function buttonClickww(){
 				window.location.href='https://www.imfmkli.top/talk.html'
+  		        }
+	    	    </script>
+		    <script>
+		        function buttonClickwww(){
+				window.location.href='https://www.imfmkli.top/talk2.html'
   		        }
 	    	    </script>
 		    <!--留言-->
