--- a/index.html
+++ b/index.html
@@ -177,12 +177,7 @@
   		    严禁发布广告；<br>
 			</center>
 		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickwww();" id="jiazai">加载留言系统1（Twikoo（跳转去另一个页面））</button></center>			
-		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickww();" id="jiazai">加载留言系统2（giscus（跳转去另一个页面））</button></center>
-		    <script>
-		        function buttonClickww(){
-				window.location.href='https://www.imfmkli.top/talk.html'
-  		        }
-	    	    </script>
+		    <br><center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickww();" id="jiazai">加载留言系统2（giscus（跳转去另一个页面））</button></center>
 		    <script>
 		        function buttonClickwww(){
 				window.location.href='https://www.imfmkli.top/talk2.html'
