--- a/talk2.html
+++ b/talk2.html
@@ -1,6 +1,6 @@
-
+<!DOCTYPE html>
 <div id="tcomment"></div>
-<script src="https://unpkg.com/twikoo@1.4.15/dist/twikoo.all.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/twikoo@1.4.15/dist/twikoo.all.min.js"></script>
 <script>
 	twikoo.init({
 	  envId: 'https://talk-dusky.vercel.app/',
