--- a/index.html
+++ b/index.html
@@ -259,6 +259,11 @@
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
                 <div class="mdui-list-item-content">Fmkliの副Blog</div>
             </li>
+		
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmkli.eu.org/'">
+                <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
+                <div class="mdui-list-item-content">无名博客</div>
+            </li>
             
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://bbs.imfmkli.top'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">wifi_tethering</i>
