--- a/talk2.html
+++ b/talk2.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
-<div id="tcomment"></div>
-<script src="https://cdn.jsdelivr.net/npm/twikoo@1.4.15/dist/twikoo.all.min.js"></script>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>I'm Fmkli</title>
+    <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
+    <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
+</head>
+            <!-- 捐赠卡片 -->
+            <div class="mdui-card card">
+
+                <div class="mdui-card-primary">
+                    <div class="mdui-card-primary-title">留言板</div>
+                </div>
+
+                <!-- 卡片的内容 -->
+                <div class="mdui-card-content mdui-typo">
 <script>
 	twikoo.init({
 	  envId: 'https://talk-dusky.vercel.app/',
@@ -10,3 +24,5 @@
  	  // lang: 'zh-CN', // 用于手动设定评论区语言，支持的语言列表 https://github.com/imaegoo/twikoo/blob/dev/src/js/utils/i18n/index.js
 	})
 </script>
+                </div>
+	    </div>
