--- a/talk2.html
+++ b/talk2.html
@@ -15,6 +15,8 @@
 
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
+<div id="tcomment"></div>
+<script src="https://cdn.jsdelivr.net/npm/twikoo@1.4.15/dist/twikoo.all.min.js"></script>
 <script>
 	twikoo.init({
 	  envId: 'https://talk-dusky.vercel.app/',
