--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <center>
         <p>
 <img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="100" height="100">
-这是个独特的主页<br>
+<br>这是个独特的主页<br><hr>
 <a href="//blog.imfmkli.top">博客</a>
         </p>
     </center>
