--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h1 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            欢迎访问Fmkli的网站<br>新年快乐！建站俩周年了，好耶！<noscript><br><p>请开启JavaScript以让网站正常运行</p></noscript>
+            欢迎访问Fmkli的网站<br>新年快乐！建站俩周年了，好耶！<br>站长是位小鸽鸽[doge]<noscript><br><p>请开启JavaScript以让网站正常运行</p></noscript>
         </h1>
     </nav>
 
