--- a/index.html
+++ b/index.html
@@ -375,7 +375,8 @@
             <div class="mdui-card-content mdui-typo mdui-center">
                 <p>本站由Fmkli搭建并维护--由DnsPod提供域名--由CloudFlare托管域名--由Vercel托管网站<br> <a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a><br>
 		    <span class="footer-icp"><img class="ipc-icon" src="https://union.estu.site/UCP.png" alt="" width="20" height="20" ><a class="icpgrass" href="https://union.estu.site/" target="_blank">草UCP-20220116-66</a></span>
-		 <br>致谢：Yfun -- 本站使用了他写的一些JS , 原罪_超凡、Eric -- 对本主页提出建议 
+		 <br>致谢：Yfun -- 本站使用了他写的一些JS , 原罪_超凡、Eric -- 对本主页提出建议 <br>
+                本站较丑，但<br><a href="https://www.alphapic.org.cn/p/AEsD"><img src="https://q3.a1pic.cn/2022/01/26/AEsD.th.jpg" alt="AEsD.jpg" border="0" /></a>
 		</p>
             </div>
         </div>
