--- a/talk2.html
+++ b/talk2.html
@@ -26,5 +26,19 @@
  	  // lang: 'zh-CN', // 用于手动设定评论区语言，支持的语言列表 https://github.com/imaegoo/twikoo/blob/dev/src/js/utils/i18n/index.js
 	})
 </script>
+<hr><h1>留言板2</h1><br>
+<script src="https://giscus.app/client.js"
+        data-repo="fmkli/fmkli"
+        data-repo-id="MDEwOlJlcG9zaXRvcnkyOTA0NTkxNTQ="
+        data-category="随便说说"
+        data-category-id="DIC_kwDOEVAOEs4CAXnX"
+        data-mapping="title"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-theme="light"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+</
                 </div>
 	    </div>
