--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@
    		    请友好评论，保持对他人的尊重；<br>
   		    严禁发布广告；<br>
 			</center>
-		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickwww();" id="jiazai">加载留言系统1（Twikoo（跳转去另一个页面））</button></center>			
-		    <br><center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickww();" id="jiazai">加载留言系统2（giscus（跳转去另一个页面））</button></center>
+		    <center><button class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-btn-raised" onclick="buttonClickwww();" id="jiazai">加载留言系统（跳转去另一个页面）</button></center>			
 		    <script>
 		        function buttonClickwww(){
 				window.location.href='https://www.imfmkli.top/talk2.html'
