--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
 </head>
-<body onload="test()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
+<body onload="test();countTime()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
     <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png/webp'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
@@ -137,14 +137,12 @@
             setTimeout(countTime,1000);
         }
  </script>
-<body onload = "countTime()">
   <div>还有
          <span id="day"></span>
          <span id="hour"></span>
          <span id="minute"></span>
          <span id="second"></span> 就过年啦，祝大家新年快乐！
     </div>
- </body>
                 <p></p>
                 </div>
             </div>
