--- a/index.html
+++ b/index.html
@@ -434,7 +434,27 @@
             <div class="mdui-card-content mdui-typo mdui-center">
                 <p>本站由Fmkli搭建并维护--由DnsPod提供域名--由CloudFlare托管域名--由Vercel托管网站<br> <a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a><br>
 		    <span class="footer-icp"><img class="ipc-icon" src="./UCP.png" alt="" width="20" height="20" ><a class="icpgrass" href="https://union.estu.site/" target="_blank">草UCP-20220116-66</a></span>
-		 <br>致谢：Yfun -- 本站使用了他写的一些JS , 原罪_超凡、Eric -- 对本主页提出建议 <br>友链： <a href="http://dzx.gitlab.io/index/">DzxiumWebPages</a><br><br><br>
+		 <br>致谢：Yfun -- 本站使用了他写的一些JS , 原罪_超凡、Eric -- 对本主页提出建议 <br>友链： <a href="http://dzx.gitlab.io/index/">DzxiumWebPages</a><br>
+ <div style="float:right">本站已运行[<SPAN id=span_dt_dt style="color: #228B22; "></SPAN> <SCRIPT language=javascript>function show_date_time(){
+window.setTimeout("show_date_time()", 1000);
+BirthDay=new Date("26/8/2020 14:27:00");
+today=new Date();
+timeold=(today.getTime()-BirthDay.getTime());
+sectimeold=timeold/1000
+secondsold=Math.floor(sectimeold);
+msPerDay=24*60*60*1000
+e_daysold=timeold/msPerDay
+daysold=Math.floor(e_daysold);
+e_hrsold=(e_daysold-daysold)*24;
+hrsold=Math.floor(e_hrsold);
+e_minsold=(e_hrsold-hrsold)*60;
+minsold=Math.floor((e_hrsold-hrsold)*60);
+seconds=Math.floor((e_minsold-minsold)*60);
+span_dt_dt.innerHTML='<font style=color:#FF0000>'+daysold+'</font> 天 <font style=color:#FF0000>'+hrsold+'</font> 时 <font style=color:#FF0000>'+minsold+'</font> 分 <font style=color:#FF0000>'+seconds+'</font> 秒';
+}
+show_date_time();</script>]
+ </div>
+                <br><br><br>
                 本站较丑，但<br><h2>又不是不能用</h2>
 		</p>
             </div>
