--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     蛤，欢迎小可爱，我是Fmkli，一位学生，一只鸽子。<br />详细可看关于页面。</br>还请多多指教！
                     <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" >关注我</a> 或 通过 BiliBili<a
                         href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow"> 与我交流awa </a>。
-                    <br>你也可以通过邮箱找到我：<code>fmkli2@qq.com</code>。
+                    <br>你也可以通过邮箱找到我：<code>fmkli2#qq.com</code>  (# => @)。
                     <br>留言去本站的留言板或者<a href="https://blog.imfmkli.top/留言板/">https://blog.imfmkli.top/留言板/</a>这里哦。
                     <br>也可以捐赠一下我拉（害羞羞）：<a href="https://afdian.net/@imfmkli">爱发电</a>。
 		    </center>
@@ -185,7 +185,7 @@
                         一只小鸽子，喜欢咕咕咕<br>
                         学生一个<br>
                         QQ：2058264685<br>
-                        Email：fmkli2@qq.com / fmkli@mail.fmkli.ga (不常看)<br>
+                        Email：fmkli2#qq.com / fmkli#mail.fmkli.ga (不常看)  (# => @)<br>
             
                         bilibili：烤全鸽Fmkli（https://space.bilibili.com/543825809）<br>
             
@@ -377,7 +377,7 @@
                     class="mdui-list-item-icon mdui-icon material-icons">code</i>
                 <div class="mdui-list-item-content">共创世界</div>
             </li>
-            <li class="mdui-list-item mdui-ripple" onclick="mdui.alert('fmkli2@qq.com')"> <i
+            <li class="mdui-list-item mdui-ripple" onclick="mdui.alert('fmkli2#qq.com  (# => @)')"> <i
                     class="mdui-list-item-icon mdui-icon material-icons">mail</i>
                 <div class="mdui-list-item-content">Email</div>
             </li>
