--- a/index.html
+++ b/index.html
@@ -435,6 +435,38 @@
                 <p>本站由Fmkli搭建并维护--由DnsPod提供域名--由CloudFlare托管域名--由Vercel托管网站<br> <a href="https://icp.gov.moe/?keyword=20221145" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a><br>
 		    <span class="footer-icp"><img class="ipc-icon" src="./UCP.png" alt="" width="20" height="20" ><a class="icpgrass" href="https://union.estu.site/" target="_blank">草UCP-20220116-66</a></span>
 		 <br>致谢：Yfun -- 本站使用了他写的一些JS , 原罪_超凡、Eric -- 对本主页提出建议 <br>友链： <a href="http://dzx.gitlab.io/index/">DzxiumWebPages</a><br>
+		<!--《添加网站运行时间 -->
+		<!--<br/>-->
+		<span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
+		<script>
+		    var now = new Date();
+		
+ 		   function createtime() {
+ 		       var grt = new Date("07/25/2019 12:00:00"); //此处修改你的建站时间或者网站上线时间 
+ 		       now.setTime(now.getTime() + 250);
+  		      days = (now - grt) / 1000 / 60 / 60 / 24;
+  		      dnum = Math.floor(days);
+  		      hours = (now - grt) / 1000 / 60 / 60 - (24 * dnum);
+   		     hnum = Math.floor(hours);
+  		      if (String(hnum).length == 1) {
+  		          hnum = "0" + hnum;
+  		      }
+   		     minutes = (now - grt) / 1000 / 60 - (24 * 60 * dnum) - (60 * hnum);
+   		     mnum = Math.floor(minutes);
+   		     if (String(mnum).length == 1) {
+   		         mnum = "0" + mnum;
+   		     }
+   		     seconds = (now - grt) / 1000 - (24 * 60 * 60 * dnum) - (60 * 60 * hnum) - (60 * mnum);
+   		     snum = Math.round(seconds);
+   		     if (String(snum).length == 1) {
+   		         snum = "0" + snum;
+   		     }
+   		     document.getElementById("timeDate").innerHTML = " | 本站已安全运行 " + dnum + " 天 ";
+    		    document.getElementById("times").innerHTML = hnum + " 小时 " + mnum + " 分 " + snum + " 秒";
+ 		   }
+  		  setInterval("createtime()", 250);
+		</script>
+		<!-- 添加网站运行时间》 -->
                 <br><br><br>
                 本站较丑，但<br><h2>又不是不能用</h2>
 		</p>
