--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
 </head>
-<body onload="test();countTime()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
+<body onload="test();countTime()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab mdui-bottom-nav-fixed">
     <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png/webp'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-red">
-        <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
-        <a href="https://www.imfmkli.top" class="mdui-typo-title">Fmkli</a>
-        <div class="mdui-toolbar-spacer"></div>
-        <!-- 按钮 -->
-        <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
-        <a href="javascript:var s=document.createElement('script');s.src='//topurl.cn/chat.js';document.body.append(s);;" class="mdui-btn mdui-btn-icon"><img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="50" height="50"></a>
+            <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
+            <a href="https://www.imfmkli.top" class="mdui-typo-title">Fmkli</a>
+            <div class="mdui-toolbar-spacer"></div>
+            <!-- 按钮 -->
+            <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
+            <a href="javascript:var s=document.createElement('script');s.src='//topurl.cn/chat.js';document.body.append(s);;" class="mdui-btn mdui-btn-icon"><img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="50" height="50"></a>
         </div>
-        <div class="mdui-tab mdui-color-red mdui-tab-centered" mdui-tab>
-        <a href="#tab1" class="mdui-ripple mdui-ripple-white">主页</a>
-        <a href="#tab3" class="mdui-ripple mdui-ripple-white">关于</a>
-        <a href="#tab4" class="mdui-ripple mdui-ripple-white">留言</a>
-        <a href="#tab5" class="mdui-ripple mdui-ripple-white">说说</a>
-        <a href="#tab6" class="mdui-ripple mdui-ripple-white">博客</a>
+        <div class="mdui-bottom-nav mdui-bottom-nav-text-auto mdui-tab mdui-color-red mdui-tab-centered" mdui-tab>
+            <a href="#tab1" class="mdui-ripple mdui-ripple-white">主页</a>
+            <a href="#tab3" class="mdui-ripple mdui-ripple-white">关于</a>
+            <a href="#tab4" class="mdui-ripple mdui-ripple-white">留言</a>
+            <a href="#tab5" class="mdui-ripple mdui-ripple-white">说说</a>
+            <a href="#tab6" class="mdui-ripple mdui-ripple-white">博客</a>
         </div>
     </div>
 	
