--- a/index.html
+++ b/index.html
@@ -20,11 +20,26 @@
             <a href="javascript:var s=document.createElement('script');s.src='//topurl.cn/chat.js';document.body.append(s);;" class="mdui-btn mdui-btn-icon"><img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="50" height="50"></a>
         </div>
         <div class="mdui-bottom-nav mdui-bottom-nav-text-auto mdui-tab mdui-color-red mdui-tab-centered" mdui-tab>
-            <a href="#tab1" class="mdui-ripple mdui-ripple-white">主页</a>
-            <a href="#tab3" class="mdui-ripple mdui-ripple-white">关于</a>
-            <a href="#tab4" class="mdui-ripple mdui-ripple-white">留言</a>
-            <a href="#tab5" class="mdui-ripple mdui-ripple-white">说说</a>
-            <a href="#tab6" class="mdui-ripple mdui-ripple-white">博客</a>
+    		<a href="#tab1" class="mdui-ripple mdui-ripple-white mdui-bottom-nav-active">
+        		<i class="mdui-icon material-icons">home</i>
+        		<label>主页</label>
+    		</a>
+    		<a href="#tab3" class="mdui-ripple mdui-ripple-white">
+        		<i class="mdui-icon material-icons">people</i>
+        		<label>关于</label></label>
+   		</a>
+    		<a href="#tab4" class="mdui-ripple mdui-ripple-white">
+        		<i class="mdui-icon material-icons">content_paste</i>
+        		<label>留言</label>
+    		</a>
+    		<a href="#tab5" class="mdui-ripple mdui-ripple-white">
+        		<i class="mdui-icon material-icons">insert_comment</i>
+        		<label>说说</label>
+    		</a>
+    		<a href="#tab6" class="mdui-ripple mdui-ripple-white">
+        		<i class="mdui-icon material-icons">library_books</i>
+        		<label>博客</label>
+    		</a>
         </div>
     </div>
 	
