--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
 </head>
-<body onload="test();countTime()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab mdui-bottom-nav-fixed">
+<body onload="test();countTime()" class="mdui-appbar-with-toolbar mdui-bottom-nav-fixed">
     <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png/webp'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
@@ -19,7 +19,7 @@
             <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
             <a href="javascript:var s=document.createElement('script');s.src='//topurl.cn/chat.js';document.body.append(s);;" class="mdui-btn mdui-btn-icon"><img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="50" height="50"></a>
         </div>
-        <div class="mdui-bottom-nav mdui-bottom-nav-text-auto mdui-tab mdui-color-red mdui-tab-centered" mdui-tab>
+        <div class="mdui-bottom-nav mdui-bottom-nav-text-auto mdui-color-indigo">
     		<a href="#tab1" class="mdui-ripple mdui-ripple-white mdui-bottom-nav-active">
         		<i class="mdui-icon material-icons">home</i>
         		<label>主页</label>
@@ -45,7 +45,7 @@
 	
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h1 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            欢迎访问Fmkli的网站<br>新年快乐！建站俩周年了，好耶！<br>站长是位小鸽鸽[doge]<noscript><br><p>请开启JavaScript以让网站正常运行</p></noscript>
+            欢迎访问Fmkli的网站<br>新年快乐！建站俩周年了，好耶！<br>可以通过下面的导航栏切换页面哦~<noscript><br><p>请开启JavaScript以让网站正常运行</p></noscript>
         </h1>
     </nav>
 
