--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
             <a href="javascript:var s=document.createElement('script');s.src='//topurl.cn/chat.js';document.body.append(s);;" class="mdui-btn mdui-btn-icon"><img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="50" height="50"></a>
         </div>
-        <div class="mdui-bottom-nav mdui-bottom-nav-text-auto mdui-color-indigo">
+        <div class="mdui-bottom-nav mdui-bottom-nav-text-auto mdui-color-red" mdui-tab>
     		<a href="#tab1" class="mdui-ripple mdui-ripple-white mdui-bottom-nav-active">
         		<i class="mdui-icon material-icons">home</i>
         		<label>主页</label>
