--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-red">
-            <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
+            <a class="mdui-btn" mdui-drawer="{target: '#left-drawer',overlay: true}"><i class="mdui-icon material-icons">menu</i></a>
             <a href="https://www.imfmkli.top" class="mdui-typo-title">Fmkli</a>
             <div class="mdui-toolbar-spacer"></div>
             <!-- 按钮 -->
