--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 		
 	    <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://eatkano.imfmkli.top/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">games</i>
-                <div class="mdui-list-item-content">吃掉小鹿乃</div>
+                <div class="mdui-list-item-content">吃掉小菜狗</div>
             </li>
             
             <li class="mdui-subheader">找到我</li>
