--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h1 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            <br><br>欢迎访问Fmkli的网站<br>新年快乐！建站俩周年了，好耶！<br>可以通过上面的导航栏切换页面哦~<noscript><br><p>请开启JavaScript以让网站正常运行</p></noscript>
+            欢迎访问Fmkli的网站<br>新年快乐！建站俩周年了，好耶！<br>可以通过上面的导航栏切换页面哦~<noscript><br><p>请开启JavaScript以让网站正常运行</p></noscript>
         </h1>
     </nav>
 
