--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <!-- 抽屉栏 -->
     <div class="mdui-drawer mdui-color-white mdui-drawer-close" id="left-drawer">
         <ul class="mdui-list">
-            <h3><li class="mdui-subheader">这是Fmkli的小网站</li></h3>
+            <center><h3>这是Fmkli的小网站</h3></center>
             <li class="mdui-subheader">你拉开了这个网站的抽屉！</li>
             <li class="mdui-subheader">我的网站</li>
 
