--- a/index.html
+++ b/index.html
@@ -310,6 +310,11 @@
                 <div class="mdui-list-item-content">FmkliのBlog</div>
             </li>
 		
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://test.imfmkli.top/'">
+                <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
+                <div class="mdui-list-item-content">Fmkliの副Blog</div>
+            </li>
+		
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmkli.eu.org/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
                 <div class="mdui-list-item-content">无名博客</div>
