--- a/index.html
+++ b/index.html
@@ -38,16 +38,11 @@
 	    </a>
         </div>
     </div>
-	
-    <nav id="banner" class="mdui-container-fluid mdui-valign">
-        <h1 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            欢迎访问Fmkli的网站<br>新年快乐！建站俩周年了，好耶！<br>可以通过上面的导航栏切换页面哦~<noscript><br><p>请开启JavaScript以让网站正常运行</p></noscript>
-        </h1>
-    </nav>
 
     <div class="mdui-container-fluid">
         <div id="tab1">
             <br>
+	    <noscript><br><h1>请开启JavaScript以让网站正常运行</h1></noscript>
             <!-- 介绍卡片 -->
             <div class="mdui-card card">
 
