--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
 </head>
-<body onload="test();countTime()" class="">
+<body onload="test();countTime()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
     <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png/webp'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-red">
-            <a class="mdui-btn" mdui-drawer="{target: '#left-drawer',overlay: true}"><i class="mdui-icon material-icons">menu</i></a>
+            <a class="mdui-btn" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></a>
             <a href="https://www.imfmkli.top" class="mdui-typo-title">Fmkli</a>
             <div class="mdui-toolbar-spacer"></div>
             <!-- 按钮 -->
