--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 	    </a>
         </div>
     </div>
-
+    <nav id="banner" class="mdui-container-fluid mdui-valign">
+	<h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
+	    Happy New Year!
+	</h2>
+    </nav>
     <div class="mdui-container-fluid">
         <div id="tab1">
             <br>
