--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
 </head>
 <body onload="test();countTime()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
-    <div style="position: fixed; background:url('https://q3.a1pic.cn/2022/01/15/yA6e.png/webp'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
+    <div style="position: fixed; background:url('https://api.dujin.org/bing/1920.php'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(5px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-red">
