--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
 </head>
-<body onload="test();countTime()" class="mdui-appbar-with-toolbar mdui-appbar-with-tab">
+<body onload="test();countTime()" class="mdui-appbar-with-toolbar">
     <div style="position: fixed; background:url('https://api.dujin.org/bing/1920.php'); width: 100%; height: 100%; left: 0px; top: 0px; z-index: -100; filter: blur(2px)"></div>
     <!-- 工具栏 -->
     <div class="mdui-appbar mdui-appbar-fixed">
@@ -18,24 +18,6 @@
             <!-- 按钮 -->
             <a href="javascript:location.reload();" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
             <a href="javascript:var s=document.createElement('script');s.src='//topurl.cn/chat.js';document.body.append(s);;" class="mdui-btn mdui-btn-icon"><img src="https://www.imfmkli.top/Flysoft_files/tx.webp" width="50" height="50"></a>
-        </div>
-        <!--选项卡-->
-	<div class="mdui-tab mdui-color-red mdui-tab-centered" mdui-tab>
-            <a href="#tab1" class="mdui-ripple mdui-ripple-white">
-        	<label>主页</label>
-	    </a>
-            <a href="#tab3" class="mdui-ripple mdui-ripple-white">
-        	<label>关于</label>
-	    </a>
-            <a href="#tab4" class="mdui-ripple mdui-ripple-white">
-        	<label>留言</label>
-	    </a>
-            <a href="#tab5" class="mdui-ripple mdui-ripple-white">
-        	<label>说说</label>
-	    </a>
-            <a href="#tab6" class="mdui-ripple mdui-ripple-white">
-        	<label>博客</label>
-	    </a>
         </div>
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
@@ -416,16 +398,6 @@
 
     <style type="text/css">
 	.fmkli {
-		color:red;
-		text-decoration:none;
-	}
-    </style>
-    <style type="text/css">
-	.a-p {
-		color:red;
-		text-decoration:none;
-	}
-	.icpgrass {
 		color:red;
 		text-decoration:none;
 	}
