--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>I'm Fmkli</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
+    <link rel="stylesheet" href=".home.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
 </head>
 <body onload="test();countTime()" class="mdui-appbar-with-toolbar">
@@ -21,9 +22,9 @@
         </div>
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
-	<h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-	    Happy New Year!
-	</h2>
+        <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
+            Happy New Year!
+        </h2>
     </nav>
     <div class="mdui-container-fluid">
         <div id="tab1">
