--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>I'm Fmkli</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
-    <link rel="stylesheet" href=".home.css"/>
+    <link rel="stylesheet" href="./home.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
 </head>
 <body onload="test();countTime()" class="mdui-appbar-with-toolbar">
