--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
 
     <br>
-
+    <center>
         <!-- 末尾卡片 -->
         <div class="mdui-card card">
             <div class="mdui-card-primary">
@@ -396,7 +396,7 @@
 		</p>
             </div>
         </div>
-
+    </center>
 
 
     <script src="./mdui/js/mdui.min.js"></script>
